add basic tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 project(hyssop)
 
 #---------------------------------------------------------------------------------
@@ -9,11 +12,6 @@ enable_testing()
 add_subdirectory(googletest)
 include_directories(googletest/include)
 
-#---------------------------------------------------------------------------------
-# Package files
-#---------------------------------------------------------------------------------
-add_executable(hyssop src/get-started.cc)
-#add_subdirectory(src)
 include_directories($(PROJECT_SOURCE_DIR)/include)
 
 #---------------------------------------------------------------------------------
@@ -27,9 +25,17 @@ include_directories(eigen)
 #---------------------------------------------------------------------------------
 # Test files
 #---------------------------------------------------------------------------------
+add_executable(hyssop_test)
 add_subdirectory(tests)
 
-target_link_libraries(hyssop GTest::gtest_main)
+target_link_libraries(hyssop_test GTest::gtest_main)
 
 include(GoogleTest)
-gtest_discover_tests(hyssop)
+gtest_discover_tests(hyssop_test)
+
+#---------------------------------------------------------------------------------
+# Package files
+# Placed after test target, gtest fails to discover any tests otherwise
+#---------------------------------------------------------------------------------
+add_executable(hyssop)
+add_subdirectory(src)
