advanced initializion: comma initializer (matrix)

--- a/tests/01-dense-matrix/CMakeLists.txt
+++ b/tests/01-dense-matrix/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(hyssop_test PRIVATE 01-the-matrix-class.cc
                                    02-matrix-arithmetic.cc
                                    03-the-array-class.cc
                                    04-block-operations.cc
-                                   05-slicing-and-indexing.cc)
+                                   05-slicing-and-indexing.cc
+                                   06-advanced-initialization.cc)
